second commit master

--- a/NexMed.Web/Views/Member/Index.cshtml
+++ b/NexMed.Web/Views/Member/Index.cshtml
@@ -1,2 +1,12 @@
-﻿
-Member
+﻿<div class="col-xs-6">
+    <h2>
+        User information
+    </h2>
+    <div class="col-xs-6">User Name</div>
+    <div class="col-xs-6">@ViewBag.User.Name</div>
+</div>
+<div class="col-xs-6">
+    <h2>
+        Weather information
+    </h2>
+</div>
