--- a/NexMed.Web/Views/User/SignIn.cshtml
+++ b/NexMed.Web/Views/User/SignIn.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="sign_in">
     <form action="/User/SignIn" autocomplete="off" method="post">
         <input class="form-control" placeholder="E-mail" maxlength="250" type="email" value="" name="email" required>@**@
-        <input placeholder="Password" maxlength="250" type="password" value="" required>
+        <input placeholder="Password" maxlength="250" type="password" value="" name="password" required>
         <input class="button" type="submit" value="Sign In">
     </form>
     <a href="/User/SignUp">Open an account</a>
