add Weatherbit+autofac+member page

--- a/NexMed.Web/Styles/Site.css
+++ b/NexMed.Web/Styles/Site.css
@@ -25,6 +25,10 @@
     text-align:center;
 }
 
+.hidden {
+    display:none;
+}
+/*------------------sigh in sign out------------------*/
 .sign_in {
     background: url(../images/sign_in.png);
     width: 375px;
